--- a/css/cssurgence/style-propos1.css
+++ b/css/cssurgence/style-propos1.css
@@ -1,6 +1,6 @@
 /* ===================================
    PAGE À PROPOS - DESIGN SOMBRE PREMIUM
-   Yann WZ Service
+   YannService
    =================================== */
 
 :root {
